--- a/public/login.html
+++ b/public/login.html
@@ -57,9 +57,9 @@
 
 <script>
 
-    var porta = 7777
+    var porta = 80
 
-    var URL_BASE = `http://wolff.gleeze.com:${porta}`
+    var URL_BASE = `http://issuer-jolocom.gidlab.rnp.br:${porta}`
 
     var qr;
 
