--- a/public/issuer.html
+++ b/public/issuer.html
@@ -97,7 +97,7 @@
         }
     }
 
-    var wsURL = getFullURL(URL_BASE,porta)
+    var wsURL = getFullWebSocketURL(URL_BASE,porta)
 
     var qr;
 
