--- a/public/login.html
+++ b/public/login.html
@@ -75,7 +75,7 @@
         }
     }
 
-    var wsURL = getFullURL(URL_BASE,porta)
+    var wsURL = getFullWebSocketURL(URL_BASE,porta)
 
     var qr;
 
