--- a/public/issuer.html
+++ b/public/issuer.html
@@ -61,7 +61,7 @@
     <div id="email">
     <br/><br/>
     E-mail:
-    <input id="emailInput" type="text" name="email" onblur="validacaoEmail(f1.email)"  maxlength="60" size='65'>
+    <input id="emailInput" type="text" name="email" maxlength="60" size='65'>
     <button onclick="enviarEmail()">enviar</button>
     </div>
 
@@ -81,11 +81,11 @@
 
     //-----> Configure os PARÂMETROS AQUI!
 
-    //PORTA
-    var porta = 80
+    //PORTA do serviço público
+    var PUBLIC_PORT = 80
 
-    //URL_BASE
-    var URL_BASE = `http://issuer-jolocom.gidlab.rnp.br`
+    //URL do serviço público
+    var PUBLIC_URL = `http://issuer-jolocom.gidlab.rnp.br`
 
 
     function getFullWebSocketURL(url, port) {
@@ -97,7 +97,7 @@
         }
     }
 
-    var wsURL = getFullWebSocketURL(URL_BASE,porta)
+    var wsURL = getFullWebSocketURL(PUBLIC_URL,PUBLIC_PORT)
 
     var qr;
 
